--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -39,9 +39,9 @@
   Also works as a CSS data-attr selector reference point for JS version.
   These must be on top and at root.
 #}
-  <div id="menu"></div>
-  <div id="otherlangs"></div>
-  <div id="search"></div>
+  <div id="menu" class="nav-toggle-target"></div>
+  <div id="otherlangs" class="nav-toggle-target"></div>
+  <div id="search" class="nav-toggle-target"></div>
 
 {% else %}
 
