--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -107,67 +107,67 @@ $-panel-height: calc(100vh - 52px);
   }
 }
 
-.header-search__button-block {
-  align-items: center;
-  border: 0;
-  display: flex;
-  grid-area: search;
-  padding: 0 $spacing 0 0;
-  z-index: 1;
-}
+// .header-search__button-block {
+//   align-items: center;
+//   border: 0;
+//   display: flex;
+//   grid-area: search;
+//   padding: 0 $spacing 0 0;
+//   z-index: 1;
+// }
 
-.header-search__button {
-  align-items: center;
-  background-color: transparent;
-  border: 0;
-  display: flex;
-  height: 100%;
-}
+// .header-search__button {
+//   align-items: center;
+//   background-color: transparent;
+//   border: 0;
+//   display: flex;
+//   height: 100%;
+// }
 
-.header-search__button--open {
-  &::before {
-    @include pseudo-icon('search', 24px, black);
-  }
-}
+// .header-search__button--open {
+//   &::before {
+//     @include pseudo-icon('search', 24px, black);
+//   }
+// }
 
-.header-search__button--close {
-  &::before {
-    @include pseudo-icon('cross', 24px, black);
-  }
-}
+// .header-search__button--close {
+//   &::before {
+//     @include pseudo-icon('cross', 24px, black);
+//   }
+// }
 
-.header-search__menu-dropdown {
-  display: none;
-  grid-area: menu;
-}
+// .header-search__menu-dropdown {
+//   display: none;
+//   grid-area: menu;
+// }
 
-#search {
-  scroll-margin-top: 100vh;
-}
+// #search {
+//   scroll-margin-top: 100vh;
+// }
 
-/* hide button when JS is not available, hide links when it is */
-#search[data-js] ~ * .header-search__button--js {
-  display: flex;
-}
+// /* hide button when JS is not available, hide links when it is */
+// #search[data-js] ~ * .header-search__button--js {
+//   display: flex;
+// }
 
-#search[data-js] ~ * .header-search__button--link,
-#search:not([data-js]) ~ * .header-search__button--js {
-  display: none !important;
-}
+// #search[data-js] ~ * .header-search__button--link,
+// #search:not([data-js]) ~ * .header-search__button--js {
+//   display: none !important;
+// }
 
-#search:target,
-#search[data-target='true'] {
-  & ~ * .header-search__menu-dropdown {
-    display: block;
-  }
-}
+// #search:target,
+// #search[data-target='true'] {
+//   & ~ * .header-search__menu-dropdown {
+//     display: block;
+//   }
+// }
 
-#search:target {
-  & ~ * .header-search__toggle--close {
-    display: flex;
-  }
+// #search:target {
+//   & ~ * .header-search__toggle--close {
+//     display: flex;
+//   }
 
-  & ~ * .header-search__toggle--open {
-    display: none;
-  }
-}
+//   & ~ * .header-search__toggle--open {
+//     display: none;
+//   }
+// }
