--- a/templates/component/helfi-search-form.twig
+++ b/templates/component/helfi-search-form.twig
@@ -1,4 +1,4 @@
-<form class="helfi-search__form" action="https://develop.helsinki-search-results.pages.dev/">
+<form class="helfi-search__form" action="https://helsinki-search-results.metatavu.io/?locale=fi">
   <div class="js-form-item form-item js-form-type-textfield hds-text-input">
     <div class="hds-text-input__input-wrapper">
       <input type="search" name="q" value="" size="30" maxlength="128" class="form-text hds-text-input__input" placeholder="{{'Enter a search word'|t({}, {'context': 'Helfi search input placeholder'}) }}">
