--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -213,6 +213,7 @@ $-menu-transition-duration: 0.3s;
   & ~ .footer {
     @include breakpoint(max-width $breakpoint-l) {
       display: none; // Hide other content when menu is visible, to block tabbing behind menu
+      transition: display 0s linear 10s;
     }
   }
 }
@@ -250,6 +251,14 @@ $-menu-transition-duration: 0.3s;
 @include button-toggle-rules('#menu', '.nav-toggle--menu', '.nav-toggle-dropdown--menu');
 @include button-toggle-rules('#search', '.nav-toggle--search', '.nav-toggle-dropdown--search');
 
+.language-wrapper {
+  max-height: 100vh;
+  transition:
+    max-height 0s linear $-menu-transition-duration,
+    visibility 0s linear $-menu-transition-duration,
+    min-height 0s linear $-menu-transition-duration;
+}
+
 // What should happen when menu is opened
 #menu:target,
 #menu[data-target='true'] {
@@ -260,12 +269,18 @@ $-menu-transition-duration: 0.3s;
   }
 
   & ~ * .language-wrapper {
-    display: none;
+    max-height: 0;
+    min-height: 0;
+    transition-delay: 0s;
+    visibility: hidden;
   }
 
-  @include breakpoint($breakpoint-m) {
+  @include breakpoint($breakpoint-l) {
     & ~ * .language-wrapper {
       display: flex;
+      max-height: 100vh;
+      min-height: var(--language-block-height);
+      visibility: visible;
     }
   }
 }
