UHF-6046: Added language support for header search url and changed search form template

--- a/src/scss/06_components/navigation/_helfi-search-form.scss
+++ b/src/scss/06_components/navigation/_helfi-search-form.scss
@@ -1,4 +1,10 @@
+$-search-button-min-width: 112px;
+
+// HDS input height from search-input.css
+$-search-button-min-height: 56px;
+
 .helfi-search__form {
+  align-items: flex-end;
   display: flex;
   gap: $spacing-half;
 
@@ -8,5 +14,6 @@
 }
 
 .helfi-search__submit-button {
-  min-width: 112px;
+  height: $-search-button-min-height;
+  min-width: $-search-button-min-width;
 }
