UHF-6711: UHF-9604 add spacing to footer menu list bottom

--- a/src/scss/06_components/layout/_footer.scss
+++ b/src/scss/06_components/layout/_footer.scss
@@ -64,7 +64,7 @@
 
   .menu {
     @include font('body');
-    margin: $spacing 0 0;
+    margin: $spacing 0 $spacing-double 0;
 
     @include breakpoint($breakpoint-m) {
       margin-top: $spacing-and-half;
